2001-04-07  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-price-editor.c: more work

	* src/engine/gnc-pricedb.c: add an error check

	* ChangeLog: split changelog

2001-04-06  Rob Browning  <rlb@cs.utexas.edu>

	* src/scm/process.scm (gnc:run-sub-process): some process control
	fixes seen on guile-devel.	

2001-04-06  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-price-editor.c: new file with price db
	editor. Unfinished.

	* src/engine/gnc-pricedb.c: connect prices to pricedbs

2001-04-05  Dave Peticolas  <dave@krondo.com>

	* src/engine/io-gncxml-v2.c (gnc_book_load_from_xml_file_v2): fix
	for files with no pricedb section

2001-04-04  Dave Peticolas  <dave@krondo.com>

	* src/scm/prefs.scm: add price editor geometry options

2001-04-06  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/balance-sheet.scm: Major overhaul. Adapted to new
	options in gnc:html-build-acct-table. Cleaned up code. Corrected
	column alignment.

	* src/scm/html-utilities.scm (gnc:html-table-append-ruler!): New
	function.
	(gnc:html-build-acct-table): Added new arguments for how to show
	non-leaf accounts: with subtotal or not, with own balance or
	not. Removed some empty lines in the html-table.

	* src/scm/report/pnl.scm, account-summary.scm: Added support for
	new gnc:html-build-acct-tree options.

	* src/scm/report-utilities.scm (gnc:decompose-accountlist): Added
	equity accounts.

2001-04-05  James LewisMoss  <jimdres@mindspring.com>

	* src/test/test-xml-transaction.c: guess what?

	* src/test/test-xml-commodity.c: genericify all over.

	* src/test/test-xml-account.c: genericify all over.

	* src/test/gnc-test-stuff.c (test_load_file): use new generic
	interface. 
	(test_files_in_dir): same.

	* src/engine/io-gncxml-v2.h (struct sixtp_global_data_v2_struct):
	remove all the stuff made uneccesary by generification.

	* src/engine/io-gncxml-v2.c (gnc_counter_end_handler): same as below.
	(generic_callback): new func for generic callback.